{
  "version": 4,
  "terraform_version": "1.6.5",
  "serial": 1852,
  "lineage": "a9d2b65b-9deb-9cd5-26d0-2af3650113f4",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:521440290637:security-group/sg-0ee8ec3b6c5e645be",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ee8ec3b6c5e645be",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "terraform-20231211235843004800000002",
            "name_prefix": "terraform-",
            "owner_id": "521440290637",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "CreatedBy": "Corbin Grossen",
              "Project": "websitecv",
              "Stage": "dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-0590a450cecffbe19"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.private_vpc.aws_vpc.private_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "private_api_endpoint",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:521440290637:vpc-endpoint/vpce-059ccc2e0b8ec9a54",
            "dns_entry": [
              {
                "dns_name": "vpce-059ccc2e0b8ec9a54-yuaegbq2.execute-api.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-059ccc2e0b8ec9a54-yuaegbq2-us-east-1b.execute-api.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-059ccc2e0b8ec9a54-yuaegbq2-us-east-1a.execute-api.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "execute-api.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z07488741DFB9KD46OW82"
              },
              {
                "dns_name": "*.execute-api.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z07488741DFB9KD46OW82"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-059ccc2e0b8ec9a54",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-09af7035cb4d0c731",
              "eni-0e773549e996eae53"
            ],
            "owner_id": "521440290637",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0ee8ec3b6c5e645be"
            ],
            "service_name": "com.amazonaws.us-east-1.execute-api",
            "state": "available",
            "subnet_ids": [
              "subnet-03977ac80ca09ac0e",
              "subnet-0bc07cb0c910fae1f"
            ],
            "tags_all": {
              "CreatedBy": "Corbin Grossen",
              "Project": "websitecv",
              "Stage": "dev"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0590a450cecffbe19"
          },
          "dependencies": [
            "aws_security_group.private_sg",
            "module.private_vpc.aws_subnet.private_subnet",
            "module.private_vpc.aws_vpc.private_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.private_vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "private_vpc_nacl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:521440290637:network-acl/acl-0a189afafabbfa4d1",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "10.0.0.0/16",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0a189afafabbfa4d1",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "10.0.0.0/16",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "521440290637",
            "subnet_ids": [
              "subnet-03977ac80ca09ac0e",
              "subnet-0bc07cb0c910fae1f"
            ],
            "tags": {
              "Name": "dev-tf-websitecv-private-NACL"
            },
            "tags_all": {
              "CreatedBy": "Corbin Grossen",
              "Name": "dev-tf-websitecv-private-NACL",
              "Project": "websitecv",
              "Stage": "dev"
            },
            "vpc_id": "vpc-0590a450cecffbe19"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.private_vpc.aws_vpc.private_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.private_vpc",
      "mode": "managed",
      "type": "aws_network_acl_association",
      "name": "nacl_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-03ed883a612829f15",
            "network_acl_id": "acl-0a189afafabbfa4d1",
            "subnet_id": "subnet-03977ac80ca09ac0e"
          },
          "dependencies": [
            "module.private_vpc.aws_network_acl.private_vpc_nacl",
            "module.private_vpc.aws_subnet.private_subnet",
            "module.private_vpc.aws_vpc.private_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-09a13d0fe363849f9",
            "network_acl_id": "acl-0a189afafabbfa4d1",
            "subnet_id": "subnet-0bc07cb0c910fae1f"
          },
          "dependencies": [
            "module.private_vpc.aws_network_acl.private_vpc_nacl",
            "module.private_vpc.aws_subnet.private_subnet",
            "module.private_vpc.aws_vpc.private_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.private_vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "allow_inbound_outbound_within_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.0.0.0/16",
            "egress": false,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-736474438",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0a189afafabbfa4d1",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 0
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.private_vpc.aws_network_acl.private_vpc_nacl",
            "module.private_vpc.aws_vpc.private_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.private_vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "allow_outbound_within_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.0.0.0/16",
            "egress": true,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-1367495685",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0a189afafabbfa4d1",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 0
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.private_vpc.aws_network_acl.private_vpc_nacl",
            "module.private_vpc.aws_vpc.private_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.private_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:521440290637:route-table/rtb-0cd2632b985d29cf3",
            "id": "rtb-0cd2632b985d29cf3",
            "owner_id": "521440290637",
            "propagating_vgws": [],
            "route": [],
            "tags": {},
            "tags_all": {
              "CreatedBy": "Corbin Grossen",
              "Project": "websitecv",
              "Stage": "dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-0590a450cecffbe19"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.private_vpc.aws_vpc.private_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.private_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b44a623550e2f753",
            "route_table_id": "rtb-0cd2632b985d29cf3",
            "subnet_id": "subnet-03977ac80ca09ac0e"
          },
          "dependencies": [
            "module.private_vpc.aws_route_table.private_route_table",
            "module.private_vpc.aws_subnet.private_subnet",
            "module.private_vpc.aws_vpc.private_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-029abdadf5883499a",
            "route_table_id": "rtb-0cd2632b985d29cf3",
            "subnet_id": "subnet-0bc07cb0c910fae1f"
          },
          "dependencies": [
            "module.private_vpc.aws_route_table.private_route_table",
            "module.private_vpc.aws_subnet.private_subnet",
            "module.private_vpc.aws_vpc.private_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.private_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:521440290637:subnet/subnet-03977ac80ca09ac0e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03977ac80ca09ac0e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "521440290637",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-tf-websitecv-private-subnet-0"
            },
            "tags_all": {
              "CreatedBy": "Corbin Grossen",
              "Name": "dev-tf-websitecv-private-subnet-0",
              "Project": "websitecv",
              "Stage": "dev"
            },
            "vpc_id": "vpc-0590a450cecffbe19"
          },
          "dependencies": [
            "module.private_vpc.aws_vpc.private_vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:521440290637:subnet/subnet-0bc07cb0c910fae1f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bc07cb0c910fae1f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "521440290637",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-tf-websitecv-private-subnet-1"
            },
            "tags_all": {
              "CreatedBy": "Corbin Grossen",
              "Name": "dev-tf-websitecv-private-subnet-1",
              "Project": "websitecv",
              "Stage": "dev"
            },
            "vpc_id": "vpc-0590a450cecffbe19"
          },
          "dependencies": [
            "module.private_vpc.aws_vpc.private_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.private_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "private_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:521440290637:vpc/vpc-0590a450cecffbe19",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-010e84b5867567c3f",
            "default_route_table_id": "rtb-0b4e0420b2e5e74d2",
            "default_security_group_id": "sg-0188f0806f09362ca",
            "dhcp_options_id": "dopt-0a79681cfc474bb7b",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0590a450cecffbe19",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b4e0420b2e5e74d2",
            "owner_id": "521440290637",
            "tags": {
              "Name": "dev-tf-websitecv-private"
            },
            "tags_all": {
              "CreatedBy": "Corbin Grossen",
              "Name": "dev-tf-websitecv-private",
              "Project": "websitecv",
              "Stage": "dev"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}